--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -9,7 +9,8 @@
       "applicationUrl": "http://localhost:5000;https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "hotReloadEnabled": false
     }
   }
 }
